--- a/Feedbacksystem/templates/pages/departments.html
+++ b/Feedbacksystem/templates/pages/departments.html
@@ -46,7 +46,7 @@
   </div>
 
 <div class="table-responsive mt-2">
-  <table class="table table-bordered table-responsive " >
+  <table class="table table-bordered" >
       <tr>
           <th  scope="col">Department</th>
   
