--- a/Feedbacksystem/templates/pages/forms.html
+++ b/Feedbacksystem/templates/pages/forms.html
@@ -38,6 +38,15 @@
       </div>
     </div>
 
+    <div class="col-md-6 mt-2">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Stakeholders' Feedback Evaluation Form</h2>
+          <a href="{% url 'edit_webinar_seminar_form' %}" class="btn btn-warning custom-btn" style="width: 100%;"><i class="bi bi-pencil-square"></i> <b>Edit</b></a>
+        </div>
+      </div>
+    </div>
+
   </div>
 
  
