--- a/Feedbacksystem/templates/pages/stakeholderevaluations.html
+++ b/Feedbacksystem/templates/pages/stakeholderevaluations.html
@@ -50,7 +50,7 @@
         </button>
     </div>
      <!-- Sort Dropdown -->
-    <div class="col-md-4 col-sm-7 col-12">
+    <div class="col-md-4 col-sm-7 col-12" style="margin-right: 0.5em;">
         <select class="form-select" name="sort" id="sort-list" onchange="location = finalurl();">
         <option value="" id="placeholder" disabled selected hidden>Sort</option>
         <option id="date" value="date">Date: Ascending</option>
@@ -59,66 +59,76 @@
         <option id="-average_rating" value="-average_rating">Average Rating: Descending</option>
         </select>
     </div>
+
+    <div class="col-lg-4 col-md-2">
+      <a href="{% url 'stakeholderevaluations_csv' %}?{{ request.GET.urlencode }}" class="btn btn-primary">Export to CSV</a>
+    </div>
+  </div>
+
 </div>
-  <div class="table-responsive mt-2 ">
-    <table class="table table-bordered">
-        <tr>
-            <th  scope="col">Date of Visit</th>
-            <th  scope="col">Purpose of Visit</th>
-            <th  scope="col">Average Rating</th>
-            <th  scope="col">Comments/Suggestions</th>
-            <th  scope="col">Polarity </th>
-            <th  scope="col">Academic Year </th>
-            <th  scope="col">Semester </th>
-            <th  scope="col">Options </th>
-        </tr>
-        {% for i in page_obj %}
-        <tr>
-            <td>{{ i.date }} </td>
-            <td>{{ i.purpose }}</td>
-            <td>{{ i.average_rating }}</td>
-            <td>{{ i.suggestions_and_comments }}</td>
-            <td>...</td>
-            <td>{{ i.academic_year }}</td>
-            <td>{{ i.semester }}</td>
-            <td style="display: flex; flex-direction: row; align-items: center; height: 100px;">
+  <!-- Search Form and Export Button -->
 
-              <a href="{% url 'admin_view_stakeholder_form' i.pk %}" style="margin-right: 10px; text-decoration: none;">
-                <button class="btn btn-primary d-flex align-items-center" style=" padding:1px 7px 1px 7px">
-                  <i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i>View</button></a>
+  <div class="container">
+    <div class="table-responsive mt-2 ">
+      <table class="table table-bordered table-responsive">
+          <tr>
+              <th  scope="col">Date of Visit</th>
+              <th  scope="col">Purpose of Visit</th>
+              <th  scope="col">Average Rating</th>
+              <th  scope="col">Comments/Suggestions</th>
+              <th  scope="col">Polarity </th>
+              <th  scope="col">Academic Year </th>
+              <th  scope="col">Semester </th>
+              <th  scope="col">Options </th>
+          </tr>
+          {% for i in page_obj %}
+          <tr>
+              <td>{{ i.date }} </td>
+              <td>{{ i.purpose }}</td>
+              <td>{{ i.average_rating }}</td>
+              <td>{{ i.suggestions_and_comments }}</td>
+              <td>...</td>
+              <td>{{ i.academic_year }}</td>
+              <td>{{ i.semester }}</td>
+              <td style="display: flex; flex-direction: row; align-items: center; height: 100px;">
+                <a href="{% url 'admin_view_stakeholder_form' i.pk %}" style="margin-right: 10px; text-decoration: none;">
+                  <button class="btn btn-primary d-flex align-items-center" style=" padding:1px 7px 1px 7px">
+                    <i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i>View</button></a>
     
-        </tr>
+          </tr>
+          {% endfor %}
+      </table>
+  </div>
+
+
+  <nav class="pagination justify-content-center" aria-label="...">
+    <ul class="pagination">
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}&{{ request.GET.urlencode|cut:'page=' }}">Previous</a>
+        </li>
+        {% endif %}
+
+        {% for i in paginator.page_range %}
+        {% if i == page_obj.number %}
+        <li class="page-item active" aria-current="page">
+            <a class="page-link" href="?page={{ i }}&{{ request.GET.urlencode|cut:'page=' }}">{{ i }}</a>
+        </li>
+        {% else %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ i }}&{{ request.GET.urlencode|cut:'page=' }}">{{ i }}</a>
+        </li>
+        {% endif %}
         {% endfor %}
-    </table>
- 
-      {% if is_paginated %}
-      <nav class = "pagination justify-content-center" aria-label="...">
-          <ul class="pagination">
-              {% if page_obj.has_previous %}
-            <li class="page-item ">
-              <a class="page-link" tabindex= "-1" aria-disabled = "true" href ="?page={{ page_obj.previous_page_number }}{% if ordering %}&ordering={{ ordering }}{% endif %}">Previous</a>
-            </li>
-              {% endif %}
-              {% for i in paginator.page_range %}
-              {% if i == page_obj.number %}
-  
-            <li class="page-item active" aria-current="page">
-              <a class="page-link" href="?page={{i}}{% if ordering %}&ordering={{ ordering }}{% endif %}">{{i}}</a>
-            </li>
-            {% else %}
-            <li class="page-item"><a class="page-link"  href="?page={{i}}{% if ordering %}&ordering={{ ordering }}{% endif %}">{{i}}</a></li>
-            {% endif %}
-            {% endfor %}
-            {% if page_obj.has_next %}
-            <li class="page-item">
-              <a class="page-link" tabindex= "-1" href ="?page={{ page_obj.next_page_number }}{% if ordering %}&ordering={{ ordering }}{% endif %}">Next</a>
-            </li>
-            {% endif %}
-          </ul>
-        </nav>
 
+        {% if page_obj.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}&{{ request.GET.urlencode|cut:'page=' }}">Next</a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
 
-    {% endif %}
     <script>
         // for getting the sorting status to be displayed in sorting dropdown placeholder
         function get(name) {
