--- a/Feedbacksystem/templates/pages/students.html
+++ b/Feedbacksystem/templates/pages/students.html
@@ -99,7 +99,7 @@
   </div>
   </form>
   </div>
-<div class="table-responsive mt-2 ">
+<div class="table-responsive mt-1 ">
   <table class="table table-bordered">
       <tr>
         <th scope="col">Student Number</th>
@@ -147,7 +147,7 @@
   <ul class="pagination justify-content-center">
       {% if page_obj.has_previous %}
       <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}&{{ request.GET.urlencode|cut:'page=' }}" aria-label="Previous">
               <span aria-hidden="true">&laquo;</span>
           </a>
       </li>
@@ -155,13 +155,13 @@
 
       {% for num in page_obj.paginator.page_range %}
       <li class="page-item {% if page_obj.number == num %}active{% endif %}">
-          <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+          <a class="page-link" href="?page={{ num }}&{{ request.GET.urlencode|cut:'page=' }}">{{ num }}</a>
       </li>
       {% endfor %}
 
       {% if page_obj.has_next %}
       <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}&{{ request.GET.urlencode|cut:'page=' }}" aria-label="Next">
               <span aria-hidden="true">&raquo;</span>
           </a>
       </li>
